2 August 2012: Matthijs
- Better error message when reading large zone file (OPENDNSSEC-261)
- Explicit shutdown to ods-signer client to prevent hanging clients

30 July 2012: Matthijs
- Make random_id() more random.

24 July 2012: Matthijs
- Fix assertion error when printing signed zone with empty non-terminals
  and NSEC.

23 July 2012: Matthijs
- OPENDNSSEC-304: Check pidfile on startup, complain and exit if pidfile
  exists and corresponding process is running.

6 July 2012: Matthijs
- OPENDNSSEC-269: Fix crash in ldns_rr_list_push_rr() due to missing lock
  in ixfr structure.

28 June 2012: Matthijs
- OPENDNSSEC-290: Fix false conflict detected when changing CNAME into A.

27 June 2012: Matthijs
- SUPPORT-29/ OPENDNSSEC-289: Fix ods-signer clear command exits prematurely.

21 June 2012: Matthijs
- OPENDNSSEC-255: Defense mechanism for writing out mangled RRSIGs.
- OPENDNSSEC-260: if hsm_create_context() fails, reload so that hsm_reopen()
  will be called.
- OPENDNSSEC-261: <Peer/> element does not require <Prefix/>, so that you
  can have an ACL based on a TSIG <Key/> only.

20 June 2012: Matthijs
- OPENDNSSEC-282/SUPPORT-30: Cleanup RRSIGs for RRsets that become glue

4 June 2012: Matthijs
- SUPPORT-28: Fix build warnings on NetBSD (thanks Fredrik Pettai).

24 May 2012: Matthijs
- OPENDNSSEC-267: Sign NOTIFY OK response with TSIG.

21 May 2012: Matthijs
- OPENDNSSEC-263: Add EDNS support: Bind9 sends zone transfer and soa requests
  with EDNS, OpenDNSSEC did not expect OPT RRs.

16 May 2012: Matthijs
- OPENDNSSEC-264: fixes assertion error when writing out IXFR file.
- OPENDNSSEC-265: Fix crash when deleting denial node without RRset (may
  happen in policies with NSEC3/ Optout).

15 May 2012: Matthijs
- OPENDNSSEC-259: Fix assertion error in wire/sock.c when doing outbound axfr
  for large zones.

20 April 2012: Matthijs
- OPENDNSSEC-247: TTL on NSEC(3) was not updated on SOA Minimum change.

3 April 2012: Matthijs